# pivot-viewport-asset-organizer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  __init__.py  assets.blend  assets.blend1  build_wheel.py  classes.py  constants.py  operators.py  pyproject.toml  ui.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
cmake/: EnsureEditionOutputs.cmake.in
cpp/: shm_bridge.cpp
cython/: CMakeLists.txt  bridge.pyx  edition_flags.pxi.in  selection_utils.pxd  selection_utils.pyx  shm_utils.pyx  standardize.pyx  surface_manager.pyx  transform_utils.pxd  transform_utils.pyx
cython/operators/: classify_object.pyx  standardize.pyx
cython/operators/classify/: __init__.pyx  classify_object.pyx
cython/shared/: classification.pyx  collection_manager.pyx  edition_utils.pyx  engine.pyx  engine_state.pyx  group_manager.pyx  selection_utils.pyx  shm_utils.cpp  shm_utils.pyx  surface_manager.pyx  sync_manager.pyx  transform_utils.pyx
logic/: context.py
native/: __init__.py  pyproject.toml  setup.py
pivot/: __init__.py  blender_manifest.toml  classes.py  classification_utils.py  constants.py  engine.py  engine_state.py  handlers.py  surface_manager.py  sync_manager.py  ui.py
pivot/lib/: .edition  __init__.py
pivot/operators/: classification.py  group_classification.py  object_classification.py  operators.py
pivot/wheels/: pivot_lib-1.0.0-cp311-cp311-linux_x86_64.whl
pivot_lib/: __init__.py  pyproject.toml  setup.py
pivot_lib/pivot_pkg/: __init__.py
python/: CMakeLists.txt  bridge.pyx
splatter/: __init__.py  assets.blend  bridge.pyx  classes.py  collection_manager.py  constants.py  engine.py  engine_state.py  group_manager.py  handlers.py  operators.py  property_manager.py  surface_manager.py  sync_manager.py  ui.py  utils.py
splatter/cython_api/: boost_interprocess.pxd  bounds_api.pxd  chull.pxd  chull_api.pxd  engine_api.pxd  quaternion_api.pxd  util_api.pxd  vec_api.pxd
splatter/engine/: analysis.cpp  analysis.h  bounds.cpp  bounds.h  chull.cpp  chull.h  engine.cpp  engine.h  geo2d.cpp  geo2d.h  linalg3.cpp  linalg3.h  main.cpp  util.h  voxel.cpp  voxel.h  wire_detect.cpp  wire_detect.h
splatter/engine/object/analysis/: analysis.cpp  analysis.h  ground.cpp  ground.h  wall.cpp
splatter/engine/object/computation/: b_box.cpp  b_box.h  chull.h  cog.cpp  cog.h  voxel.cpp  voxel.h  wire_detect.cpp  wire_detect.h
splatter/engine/object/util/: geo2d.h  linalg3.cpp  linalg3.h
splatter/engine/share/: concepts.h  quaternion.h  stats.cpp  stats.h  vec.h
splatter/operators/: __init__.py  classification.py  operators.py
