# Copyright (C) 2025 Nicholas Wierzbowski / Elbo Studio
# This file is part of the Pivot Bridge for Blender.

[build-system]
requires = ["setuptools>=61", "wheel", "cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pivot_lib"
version = "1.0.0"
description = "Cython extension modules for Pivot Blender addon"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Nicholas Wierzbowski", email = "nicholas.wierzbowski@elbo.studio" }
]

[project.urls]
Homepage = "https://www.elbo.studio"

[tool.setuptools]
# Install as separate pivot_lib package (not under pivot namespace)
# This avoids Blender's policy violation for top-level modules in extension directory
packages = ["pivot_lib"]
package-dir = {"pivot_lib" = "."}

[tool.setuptools.package-data]
"pivot_lib" = ["*.so", "*.pyd"]
